Sat Sep 21 03:38:09 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/main.c:
	- Use IS_TDSDEAD() for all dead socket checks.

Sat Sep 21 01:37:20 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/main.c:
	- If an invalid pool name parameter is given, print an error
	  message and exit instead of dumping core.

Fri Sep 20 17:45:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/pool/member.c:
	- Allocate a context for the tds socket connection.

Fri Sep 20 17:01:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/pool/Makefile.am src/pool/user.c
	  src/server/login.c src/server/server.c
	  src/server/server.h (added):
	- Clean up remaining pool warnings.

Fri Sep 20 16:49:25 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/pool/config.c src/pool/main.c
	  src/pool/member.c src/pool/pool.h src/pool/stream.c
	  src/pool/user.c:
	- Clean up some warnings and mistakes in the pool server.

Fri Sep 20 16:14:16 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/convert.c:
	- Always return TDS_CONVERT_NOAVAIL for unimplemented conversions
	  in type-specific conversion functions.
	- Centralize logging of unimplemented conversions into tds_convert()
	- Don't try to send server message 249 for client-side conversion
	  errors.  Instead, just send client message 20050 indicating an error
	  in the source field.
	- "#if 0" out the tds_prtype() function that's no longer used
	  (but keep it around because it might prove useful elsewhere).

Fri Sep 20 14:15:21 EDT 2002	JK Lowden <jklowden@schemamania.org>
	* Makefile.am	added version string
	* doc/Makefile.am 	added version string
				html builds if DOCBOOK_DSL is defined	
	* doc/freebcp.txt	fixed minor glitches

Fri Sep 20 10:37:07 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/token.c:
	- Only invoke the client error handler with SYBESMSG per the conditions
	  specified in Sybase documentation.  Do this regardless of whether