@@ -3,5 +3,6 @@ Makefile
 Makefile.in
 t0001
 t0002
+t0003
 tdsdump.out
 .deps
